# foundation_stereo_ros

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  package.xml  requirements.txt
foundation_stereo_ros/: foundation_stereo_node.py
launch/: default_params.yaml  foundation_stereo.launch.py
launch/configs/: foundation_stereo.yaml
weights/: model_best_bp2.aa  model_best_bp2.ab  model_best_bp2.ac  model_best_bp2.ad  post_clone.sh
